[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pg-job-runner"
version = "0.1.0"
description = "A simple async job scheduler for Python"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "asyncpg>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/pg-job-runner" 