[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pg-scheduler"
version = "0.1.0"
description = "A PostgreSQL-based async job scheduler with deduplication, periodic jobs, and reliability features"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "Miguel Rebelo", email = "miguel.python.dev@gmail.com"},
]
maintainers = [
    {name = "Miguel Rebelo", email = "miguel.python.dev@gmail.com"},
]
keywords = [
    "postgresql",
    "job-scheduler", 
    "async",
    "periodic-jobs",
    "task-queue",
    "deduplication",
    "reliability",
    "distributed"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10", 
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
    "Topic :: System :: Distributed Computing",
    "Framework :: AsyncIO",
    "Operating System :: OS Independent",
]
dependencies = [
    "asyncpg>=0.25.0",
    "croniter>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
    "pytest-timeout>=2.1",
    "black>=22.0",
    "isort>=5.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
    "pytest-timeout>=2.1",
]
examples = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
]

[project.urls]
Homepage = "https://github.com/m1guelvrrl0/pg-scheduler"
Documentation = "https://github.com/m1guelvrrl0/pg-scheduler#readme"
Repository = "https://github.com/m1guelvrrl0/pg-scheduler.git"
"Bug Tracker" = "https://github.com/m1guelvrrl0/pg-scheduler/issues"
Changelog = "https://github.com/m1guelvrrl0/pg-scheduler/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["pg_scheduler"]

[tool.hatch.build.targets.sdist]
include = [
    "/pg_scheduler",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]